--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,1 +1,7 @@
+Options -Indexes
+RewriteEngine On
 
+# Redirect all requests to index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
